mod: mdbook-quiz plugin now available, v1.1.0

--- a/book.toml
+++ b/book.toml
@@ -5,6 +5,16 @@ multilingual = false
 src = "content"
 title = "MD-Book Template for UoG"
 
+[output.html]
+mathjax-support = true
+git-repository-url = "https://github.com/uniofgreenwich/MD_Book_Template"
+edit-url-template = "https://github.com/uniofgreenwich/MD_Book_Template/edit/main/{path}"
+additional-css = ["./theme/pagetoc.css", "./theme/css/mdbook-admonish.css", "./theme/css/code.css","./theme/css/terminal.css","./theme/css/output.css"]
+additional-js  = ["./theme/pagetoc.js"]
+
+[output.html.print]
+enable = false
+
 [output.html.search]
 limit-results = 20
 use-boolean-and = true
@@ -37,14 +47,9 @@ aliases = ["cli","cmd"]
 icon = "./theme/output.svg"
 color = "#72879C"
 
-[preprocessor.pagetoc]
-[output.html]
-mathjax-support = true
-input-404 = "404/404.md"
-git-repository-url = "https://github.com/uniofgreenwich/MD_Book_Template"
-edit-url-template = "https://github.com/uniofgreenwich/MD_Book_Template/edit/main/{path}"
-additional-css = ["./theme/pagetoc.css", "./theme/css/mdbook-admonish.css", "./theme/css/code.css","./theme/css/terminal.css","./theme/css/output.css"]
-additional-js  = ["./theme/pagetoc.js"]
+[preprocessor.quiz]
+before = ["admonish"]
+fullscreen = false
+show-bug-reporter = true
 
-[output.html.print]
-enable = false
+[preprocessor.pagetoc]
