--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,13 @@ jobs:
           curl -sSL https://github.com/cognitive-engineering-lab/mdbook-quiz/releases/download/v0.3.10/mdbook-quiz_x86_64-unknown-linux-gnu_bare.tar.gz | tar -xz
           chmod +x mdbook-quiz
           mv mdbook-quiz ~/.cargo/bin/
+      
+      - name: Install mdbook-embedify
+        run: |
+          curl -sSL -o embedify.zip https://github.com/MR-Addict/mdbook-embedify/releases/download/0.2.15/mdbook-embedify-0.2.15-x86_64-unknown-linux-gnu.zip
+          unzip embedify.zip
+          chmod +x mdbook-embedify
+          mv mdbook-embedify ~/.cargo/bin/
 
       - name: Show mdbook version
         run: mdbook --version
@@ -43,7 +50,9 @@ jobs:
         run: mdbook-admonish --version
       - name: Show quiz version
         run: mdbook-quiz --version
-
+      - name: Show embedify version
+        run: mdbook-embedify --version
+        
       - name: Generate QR code
         env:
           REPO_NAME: ${{ github.repository }}
