mod: mdbook-template v1.2.1

--- a/book.toml
+++ b/book.toml
@@ -6,11 +6,20 @@ src = "content"
 title = "MD-Book Template for UoG"
 
 [output.html]
+highlightjs = false  # disable if not already
 mathjax-support = true
 git-repository-url = "https://github.com/uniofgreenwich/MD_Book_Template"
 edit-url-template = "https://github.com/uniofgreenwich/MD_Book_Template/edit/main/{path}"
-additional-css = ["./theme/pagetoc.css", "./theme/css/mdbook-admonish.css", "./theme/css/code.css","./theme/css/terminal.css","./theme/css/output.css", "./theme/css/mdbook-admonish.css"]
-additional-js  = ["./theme/pagetoc.js"]
+additional-css = [
+    "./theme/pagetoc.css", 
+    "./theme/css/mdbook-admonish.css",
+    "./theme/css/code.css",
+    "./theme/css/terminal.css",
+    "./theme/css/output.css",
+    "./theme/css/mdbook-admonish.css"
+
+]
+additional-js  = ["./theme/pagetoc.js", "./theme/highlightjs-line-numbers.js"]
 
 [output.html.print]
 enable = false
@@ -74,5 +83,3 @@ fullscreen = false
 show-bug-reporter = true
 
 [preprocessor.pagetoc]
-
-
