--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,12 @@ jobs:
           chmod +x mdbook-quiz
           mv mdbook-quiz ~/.cargo/bin/
       
+      - name: Install mdbook-gitinfo
+        run: |
+          curl -sSL https://github.com/CompEng0001/mdbook-gitinfo/releases/download/v1.0.0/mdbook-gitinfo-linux.tar.gz | tar -xz
+          chmod +x mdbook-gitinfo-linux
+          mv mdbook-gitinfo-linux ~/.cargo/bin/mdbook-gitinfo
+
       - name: Install mdbook-embedify
         run: |
           curl -sSL -o embedify.zip https://github.com/MR-Addict/mdbook-embedify/releases/download/0.2.15/mdbook-embedify-0.2.15-x86_64-unknown-linux-gnu.zip
