mod: mdbook_template from v1.2.2 to v1.2.3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,8 @@ jobs:
         run: mdbook-quiz --version
       - name: Show embedify version
         run: mdbook-embedify --version
+      - name: Show gitinfo version
+        run: mdbook-gitinfo --version
 
       - name: Generate QR code
         env:
