--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,14 @@ jobs:
           use-toc: true
           use-admonish: true
       
-      - name: Install mdbook-quiz
-        run: |
-          curl -sSL https://github.com/cognitive-engineering-lab/mdbook-quiz/releases/download/v0.4.0/mdbook-quiz_x86_64-unknown-linux-gnu_bare.tar.gz | tar -xz
-          chmod +x mdbook-quiz
-          mv mdbook-quiz ~/.cargo/bin/
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Build and install mdbook-quiz from source
+        run: cargo install mdbook-quiz --version 0.4.0
       
       - name: Install mdbook-gitinfo
         run: |
